# perf_ui

./: Cargo.toml  README.md
examples/: custom.rs  custom_minimal.rs  fps_minimalist.rs  settings.rs  simple.rs  specific_entries.rs  toggle.rs
src/: lib.rs
src/entries/: mod.rs
