[package]
name = "perf_ui"
version = "0.2.3"
authors = ["_ka_de"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ka-de/perf_ui"
homepage = "https://github.com/ka-de/perf_ui"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "Customizable Performance/Debug Overlay for Bevy UI"
exclude = ["assets/*", "screenshots/*"]

[features]
default = [ "entries" ]
entries = []
chrono = ["dep:chrono"]

[dependencies.bevy]
git = "https://github.com/ka-de/bevy"
default-features = false
features = [
    "bevy_ui",
]

[dependencies.chrono]
version = "0.4.35"
optional = true
default-features = false
features = [
    "clock",
]

[dev-dependencies.bevy]
git = "https://github.com/ka-de/bevy"
default-features = true
